# cvpartner-intro-writer

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  app.py  config.py  mypy.ini  pyproject.toml
cvpartner/: client.py
cvpartner/types/: cv.py  user_list.py
profile/: openai.py  prepare.py
